# JVTDriver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
JVTDriver-Communication/: CMakeLists.txt
JVTDriver-Communication/include/communication/: feedback_comm_manager.h  hand_side.h
JVTDriver-Communication/include/communication/listener/: comm_listener.h  feedback_data_listener.h  named_pipe_listener.h
JVTDriver-Communication/include/communication/util/: logger.h
JVTDriver-Communication/include/communication/writer/: comm_writer.h  comm_writer_factory.h  serial_comm_writer.h
JVTDriver-Communication/src/: feedback_comm_manager.cpp  standalone.cpp
JVTDriver-Communication/src/listener/: feedback_data_listener.cpp
JVTDriver-Communication/src/writer/: comm_writer_factory.cpp  serial_comm_writer.cpp
JVTDriver-OpenVR/: CMakeLists.txt
JVTDriver-OpenVR/include/: controller_device_driver.h  device_provider.h  hand_simulation.h
JVTDriver-OpenVR/jvt/: driver.vrdrivermanifest
JVTDriver-OpenVR/jvt/resources/: driver.vrresources
JVTDriver-OpenVR/jvt/resources/input/: mycontroller_profile.json
JVTDriver-OpenVR/jvt/resources/settings/: default.vrsettings
JVTDriver-OpenVR/src/: controller_device_driver.cpp  device_provider.cpp  hand_simulation.cpp  hmd_driver_factory.cpp
